--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,10 @@
-#machine:
-  # Start with Python 2
-  #python:
-  #  version: 2.7.5
+machine:
+   Start with Python 2
+  python:
+    version: 2.7.5
   # Add python 3
-  #post:
-  #  - pyenv install 3.5.0
+  post:
+    - (pyenv global 3.5.0 && pip install -r requirements.txt)
 
 test:
   override:
