--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,12 @@
 machine:
-   Start with Python 2
+  # Start with Python 2
   python:
     version: 2.7.5
   # Add python 3
-
+  post:
+    - (pyenv global 3.5.0 && pip install -r requirements.txt)
 
 test:
   override:
     - (pyenv global 2.7.5 && py.test)
-    - (pyenv global 3.5.0 && pip install -r requirements.txt && py.test)
+    - (pyenv global 3.5.0 && py.test)
