environment all kinds of fucky now

--- a/circle.yml
+++ b/circle.yml
@@ -4,8 +4,8 @@ machine:
     version: 2.7.5
 
 test:
-  pre:
-    - (pyenv global 3.5.0 && pip install -r requirements.txt)
+  #pre:
+  #  - (pyenv global 3.5.0 && pip install -r requirements.txt)
   override:
     - py.test
-    - (pyenv global 3.5.0 && python3 -m py.test)
+    - (pyenv global 3.5.0 && py.test)
