fixed bug with virtualenv and python3

--- a/circle.yml
+++ b/circle.yml
@@ -5,11 +5,15 @@ machine:
 
 dependencies:
   override:
-    - pip install -r requirements.txt
+    - (deactivate && source ~/virtualenvs/venv-2.7.5/bin/activate && pip install -r requirements27.txt)
+    # Have to upgrade virtualenv to make a virtualenv with python3
+    - pip install --upgrade virtualenv
+    - virtualenv ~/virtualenvs/venv-3.5.0 -p python3
+    - (deactivate && source ~/virtualenvs/venv-3.5.0/bin/activate && pip install -r requirements35.txt)
 
 test:
   #pre:
   #  - (pyenv global 3.5.0 && pip install -r requirements.txt)
   override:
-    - py.test
-    - (pyenv global 3.5.0 && py.test)
+    - (deactivate && source ~/virtualenvs/venv-2.7.5/bin/activate && py.test)
+    - (deactivate && source ~/virtualenvs/venv-3.5.0/bin/activate && py.test)
