--- a/circle.yml
+++ b/circle.yml
@@ -13,3 +13,4 @@ test:
   override:
     - (deactivate && source ~/virtualenvs/venv-2.7.5/bin/activate && py.test)
     - (deactivate && source ~/virtualenvs/venv-3.5.0/bin/activate && py.test)
+    - flake8
