--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include cassiopeia/_configuration/all_plugins.json
 include cassiopeia/profile_icon_names.json
 include cassiopeia/transformers/*.py
 include cassiopeia/patches.json
+include cassiopeia/resources/summonersRiftAreas.png
