--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,4 +17,4 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-    - requirements: docs/requirements-rtd.txt
+    - requirements: requirements-rtd.txt
