--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,9 @@ build:
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
+  builder: html
+  configuration: doc/conf.py
+  fail_on_warning: true
 
 # Declare the Python requirements required to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
